--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="https://kit.fontawesome.com/74bd37cc87.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body style=" background-color:lightblue ;">
     <div class="header">
         <img src="https://lumiere-a.akamaihd.net/v1/images/sw_nav_logo_mobile_659fef1a_1_99c6e87c.png" alt="logo" width="300px" height="40px">
     </div>
